--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/DrunkmasterTheme" >
+
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name" >
@@ -18,7 +19,8 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:screenOrientation="portrait"
+            android:label="@string/application_title" >
         </activity>
     </application>
 
