--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/DrunkmasterTheme" >
-
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name" >
@@ -19,8 +18,12 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/application_title" >
+            android:label="@string/application_title"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".AppsActivity"
+            android:label="@string/title_activity_apps" >
         </activity>
     </application>
 
