--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,8 @@
 
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:label="@string/app_name" >
         </activity>
-
 
         <receiver
             android:name=".Startup"
@@ -57,6 +56,10 @@
         <activity
             android:name=".AlertActivity"
             android:label="@string/title_activity_alert" >
+        </activity>
+        <activity
+            android:name=".UnlockActivity"
+            android:label="@string/title_activity_unlock" >
         </activity>
     </application>
 
